--- a/08-ansible-01-base/playbook/inventory/prod.yml
+++ b/08-ansible-01-base/playbook/inventory/prod.yml
@@ -1,9 +1,23 @@
 ---
-  el:
-    hosts:
-      centos7:
-        ansible_connection: docker
-  deb:
-    hosts:
-      ubuntu:
-        ansible_connection: docker
+all:
+  children:
+    el:
+      hosts:
+        centos7:
+          ansible_connection: ssh
+          ansible_host: 130.193.52.207
+          ansible_ssh_private_key: ~/.ssh/id_rsa.pub
+          ansible_user: centos7
+
+    deb:
+      hosts:
+        ubuntu:
+          ansible_connection: ssh
+          ansible_host: 158.160.5.93
+          ansible_ssh_private_key: ~/.ssh/id_rsa.pub
+          ansible_user: ubuntu
+
+    local:
+      hosts:
+        localhost:
+          ansible_connection: local
