--- a/08-ansible-02-playbook/playbook/inventory/prod.yml
+++ b/08-ansible-02-playbook/playbook/inventory/prod.yml
@@ -1,5 +1,15 @@
 ---
-clickhouse:
-  hosts:
-    clickhouse-01:
-      ansible_host: <IP_here>
+all:
+  children:
+    clickhouse:
+      hosts:
+        clickhouse-01:
+          ansible_connection: ssh
+          ansible_host: 89.169.160.100
+          ansible_ssh_private_key: ~/.ssh/id_rsa  
+          ansible_user: ubuntu1                    
+        clickhouse-02:
+          ansible_connection: ssh
+          ansible_host: 84.252.141.147
+          ansible_ssh_private_key: ~/.ssh/id_rsa  
+          ansible_user: ubuntu2                     
