--- a/08-ansible-03-yandex/playbook/inventory/prod.yml
+++ b/08-ansible-03-yandex/playbook/inventory/prod.yml
@@ -8,16 +8,16 @@ all:
           ansible_host: 89.169.165.186
           ansible_ssh_private_key: ~/.ssh/id_rsa  # Используйте приватный ключ
           ansible_user: ubuntu1                    # Убедитесь, что пользователь существует и имеет доступ
-    vector:
+    clickhouse:
       hosts:
-        vector-01:
+        clickhouse-02:
           ansible_connection: ssh
           ansible_host: 84.201.140.247
           ansible_ssh_private_key: ~/.ssh/id_rsa  # Используйте приватный ключ
           ansible_user: ubuntu2                    # Убедитесь, что пользователь существует и имеет доступ
-    lighthouse:
+    clickhouse:
       hosts:
-        lighthouse-01:
+        clickhouse-03:
           ansible_connection: ssh
           ansible_host: 89.169.161.241
           ansible_ssh_private_key: ~/.ssh/id_rsa  # Используйте приватный ключ
