--- a/08-ansible-03-yandex/playbook/inventory/prod.yml
+++ b/08-ansible-03-yandex/playbook/inventory/prod.yml
@@ -1,9 +1,10 @@
 ---
 all:
   children:
-    clickhouse:
+    lighthouse:
       hosts:
+        ubuntu3:
           ansible_connection: ssh
           ansible_host: 89.169.161.241
-          ansible_ssh_private_key: ~/.ssh/id_rsa  # Используйте приватный ключ
-          ansible_user: ubuntu3                    # Убедитесь, что пользователь существует и имеет доступ
+          ansible_ssh_private_key: ~/.ssh/id_rsa
+          ansible_user: ubuntu3
